--- a/public/styles.css
+++ b/public/styles.css
@@ -45,6 +45,7 @@ body {
   color: var(--light-grey);
   border-radius: 15px;
   border: 2px dotted var(--border);
+  max-width: 720px;
 }
 
 h1 {
@@ -96,14 +97,19 @@ input:focus {
 .button.active {
   background-color: var(--light-blue);
 }
+.button:hover {
+  background-color: var(--light-blue);
+}
 .button:after {
   position: absolute;
   content: "";
-  left: 0;
-  top: 0;
-}
-.button:hover {
-  background-color: var(--light-blue);
+  left: -8px;
+  top: -8px;
+  width: 100%;
+  height: 100%;
+  border: 4px solid transparent;
+  border-radius: 9px;
+  transition: position 0.3s;
 }
 
 #status {
@@ -117,7 +123,6 @@ input:focus {
   font-size: 14px;
   color: var(--highlight);
   padding: 6px;
-  border: 2px solid var(--download);
   border-radius: 6px;
   opacity: 0;
   transition: all 1.5s;
@@ -131,7 +136,6 @@ input:focus {
   font-weight: bold;
   color: #fff;
   text-decoration: none;
-  background-color: var(--download);
   cursor: pointer;
   transition: background-color 0.3s;
 }
@@ -176,7 +180,7 @@ input:focus {
 
 #terminate {
   position: absolute;
-  bottom: 150px;
+  bottom: 110px;
   left: 50%;
   text-align: center;
   transform: translate(-50%, 20px);
@@ -186,9 +190,31 @@ input:focus {
   border: none;
   color: var(--terminate);
   cursor: pointer;
+  box-shadow: 0 0 0 0 var(--terminate), 0 0 0 0 var(--terminate);
+  border-radius: 50%;
+  padding: 15px;
+}
+#terminate .icon::after {
+  content: "";
+  display: block;
+  position: absolute;
+}
+#terminate .icon:hover {
+  padding: 10px;
+  border: 5px solid var(--terminate);
+  animation: pulse 1.5s cubic-bezier(0.5, 0.5, 0, 1) infinite;
 }
 #terminate .icon i {
   font-size: 24px;
+}
+#terminate .icon i:hover {
+  background-color: var(--dark-bg);
+  border-radius: 50%;
+}
+@keyframes pulse {
+  to {
+    box-shadow: 0 0 0 10px transparent, 0 0 0 20px transparent;
+  }
 }
 #terminate .terminate-text {
   color: var(--terminate);
