--- a/public/styles.scss
+++ b/public/styles.scss
@@ -43,6 +43,7 @@ body {
 
   border-radius: 15px;
   border: 2px dotted var(--border);
+  max-width: 720px;
 }
 
 h1 {
@@ -93,16 +94,27 @@ input {
     background-color: var(--light-blue);
   }
 
-  &:after {
-    position: absolute;
-    content: "";
-    left: 0;
-    top: 0;
-  }
-
   &:hover {
     background-color: var(--light-blue);
   }
+
+  &:after {
+    position: absolute;
+    content: "";
+    left: -8px;
+    top: -8px;
+    width: 100%;
+    height: 100%;
+    border: 4px solid transparent;
+    border-radius: 9px;
+    transition: position 0.3s;
+  }
+
+
+  // &:hover:after {
+  //   border-color: var(--light-blue);
+  //   padding: 4px;
+  // }
 }
 
 #status {
@@ -116,7 +128,6 @@ input {
     font-size: 14px;
     color: var(--highlight);
     padding: 6px;
-    border: 2px solid var(--download);
     border-radius: 6px;
     opacity: 0;
     transition: all 1.5s;
@@ -131,7 +142,6 @@ input {
     font-weight: bold;
     color: #fff;
     text-decoration: none;
-    background-color: var(--download);
     cursor: pointer;
     transition: background-color 0.3s;
 
@@ -184,7 +194,7 @@ input {
 
 #terminate {
   position: absolute;
-  bottom: 150px;
+  bottom: 110px;
   left: 50%;
   text-align: center;
   transform: translate(-50%, 20px);
@@ -194,10 +204,37 @@ input {
     border: none;
     color: var(--terminate);
     cursor: pointer;
+    box-shadow: 0 0 0 0 var(--terminate), 0 0 0 0 var(--terminate);
+    border-radius: 50%;
+    padding: 15px;
+
+    &::after {
+      content: "";
+      display: block;
+      position: absolute;
+    }
+
+    &:hover {
+      padding: 10px;
+      border: 5px solid var(--terminate);
+      animation: pulse 1.5s cubic-bezier(0.5, 0.5, 0, 1) infinite;
+    }
+
   }
 
   .icon i {
     font-size: 24px;
+
+    &:hover {
+      background-color: var(--dark-bg);
+      border-radius: 50%;
+    }
+  }
+
+  @keyframes pulse {
+    to {
+      box-shadow: 0 0 0 10px transparent, 0 0 0 20px transparent;
+    }
   }
 
   .terminate-text {
@@ -209,3 +246,94 @@ input {
   }
 
 }
+
+
+
+// .wipe {
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 100%;
+//   background-color: var(--dark-grey);
+//   z-index: 9999;
+//   animation: wipe-animation 1s forwards;
+// }
+
+// .wipe-out {
+//   animation: wipe-out-animation 1s forwards;
+// }
+
+// @keyframes wipe-animation {
+//   0% {
+//     transform: translateY(-100%);
+//   }
+
+//   100% {
+//     transform: translateY(0);
+//   }
+// }
+
+// @keyframes wipe-out-animation {
+//   0% {
+//     transform: translateY(0);
+//   }
+
+//   100% {
+//     transform: translateY(-100%);
+//   }
+// }
+
+// $shooting-time: 4000ms;
+
+// .lines {
+//   position: absolute;
+//   left: 0;
+//   top: 50%;
+//   height: 2px;
+//   background: linear-gradient(-45deg, rgba(95, 145, 255, 0.35), rgba(0, 0, 255, 0));
+//   border-radius: 999px;
+//   filter: drop-shadow(0 0 6px rgba(105, 155, 255, 1));
+//   animation:
+//     tail $shooting-time linear infinite,
+//     shooting $shooting-time linear infinite;
+
+//   @for $i from 1 through 20 {
+//     &:nth-child(#{$i}) {
+//       $delay: random(9999)+0ms;
+//       top: percentage(random(100) / 100);
+//       left: 0;
+//       animation-delay: $delay;
+//     }
+//   }
+// }
+
+// @keyframes tail {
+//   0% {
+//     width: 0;
+//     opacity: 0;
+//   }
+
+//   25% {
+//     opacity: 100%;
+//   }
+
+//   75% {
+//     opacity: 100%;
+//   }
+
+//   100% {
+//     width: 100%;
+//     opacity: 0;
+//   }
+// }
+
+// @keyframes shooting {
+//   0% {
+//     transform: translateX(0);
+//   }
+
+//   100% {
+//     transform: translateX(100%);
+//   }
+// }
