--- a/public/styles.css
+++ b/public/styles.css
@@ -185,6 +185,21 @@ input:focus {
   text-align: center;
   transform: translate(-50%, 20px);
 }
+#terminate:hover::after {
+  content: "Shutdown";
+  position: absolute;
+  width: 100px;
+  left: 50%;
+  top: -75px;
+  padding: 5px;
+  transform: translate(-50%, 20px);
+  color: #fff;
+  border-radius: 20px;
+  text-transform: uppercase;
+  font-size: 10px;
+  font-weight: bold;
+  border: 2px solid rgba(255, 255, 255, 0.3411764706);
+}
 #terminate .icon {
   background-color: transparent;
   border: none;
