--- a/public/styles.scss
+++ b/public/styles.scss
@@ -199,6 +199,23 @@ input {
   text-align: center;
   transform: translate(-50%, 20px);
 
+  &:hover::after {
+    content: "Shutdown";
+    position: absolute;
+    width: 100px;
+    left: 50%;
+    top: -75px;
+    padding: 5px;
+    transform: translate(-50%, 20px);
+    // background-color: var(--terminate);
+    color: #fff;
+    border-radius: 20px;
+    text-transform: uppercase;
+    font-size: 10px;
+    font-weight: bold;
+    border: 2px solid #ffffff57;
+  }
+
   .icon {
     background-color: transparent;
     border: none;
